<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".model.MainActivity">
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.141"
        android:id="@+id/textView" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.498"/>
<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/main_login"
        android:ems="10"
        android:id="@+id/loginMain"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" android:minHeight="48dp"
        android:layout_marginTop="72dp" app:layout_constraintHorizontal_bias="0.497"
        android:layout_marginBottom="189dp" app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.012"/>
<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordMain"
        android:text="@string/main_password" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" android:minHeight="48dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintTop_toBottomOf="@+id/loginMain"
        app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintVertical_bias="0.295"/>
<Button
        android:text="@string/main_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="validate" app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" tools:ignore="UsingOnClickInXml"/>

</androidx.constraintlayout.widget.ConstraintLayout>