<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".model.TruckDetails">

    <Button
            android:text="@string/deleteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button3"
            android:onClick="deleteTruck"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/TechDateField"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:ems="10"
            android:id="@+id/LicensePlateField"
            android:inputType="none"
            android:enabled="false"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="48dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/VinField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LicensePlateField" android:layout_marginTop="28dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/euroStandartField"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/VinField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/mileageField"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/euroStandartField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/horsePowerField"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/mileageField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/powerField"
            app:layout_constraintTop_toBottomOf="@+id/horsePowerField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/colorField"
            app:layout_constraintTop_toBottomOf="@+id/powerField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/fuelTankCapacity"
            app:layout_constraintTop_toBottomOf="@+id/colorField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.497" android:minHeight="48dp"/>
    <Button
            android:text="@string/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button4"
            android:onClick="updateTruck"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" app:layout_constraintHorizontal_bias="0.059"
            android:layout_marginBottom="16dp" app:layout_constraintTop_toBottomOf="@+id/TechDateField"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/TechDateField"
            app:layout_constraintTop_toBottomOf="@+id/fuelTankCapacity" android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:minHeight="48dp" android:hint="@string/TechDate"/>

</androidx.constraintlayout.widget.ConstraintLayout>